--- a/Taste&Flavor/app/src/main/res/values/strings.xml
+++ b/Taste&Flavor/app/src/main/res/values/strings.xml
@@ -7,24 +7,12 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign in</string>
 
-    <!-- Strings related to login -->
-    <string name="prompt_email">Email</string>
-    <string name="prompt_password">Password (optional)</string>
-    <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_email">This email address is invalid</string>
-    <string name="error_invalid_password">This password is too short</string>
-    <string name="error_incorrect_password">This password is incorrect</string>
-    <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
     <string name="login">Ingresar</string>
     <string name="emailLogin">Correo electrónico</string>
     <string name="passwordLogin">Contraseña</string>
     <string name="google">Conectar con Goocle</string>
-  
-  
+
+
     <string name="logup"><u>Registrarse</u></string>
     <string name="Profile">Mi perfil</string>
     <string name="Favorite">Favoritos</string>
@@ -33,7 +21,10 @@
     <string name="Communicate">Información</string>
     <string name="about">Acerca de Nosotros</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="background">holaaaa</string>
+    <string name="descryption">Con Taste and Flavors puedes encontrar los mejores sitios
+        de tu entorno para disfrutar de tu comida preferida; Podrás saber inmediatamente
+        cuáles son los mejores sitios en cuestión de instantes y además podrás ayudar a
+        otras personas mediante tus opiniones y las fotos de esos lugares que más te gustan.</string>
+
+
 </resources>
