ya estan las vistas principal, regitro, perfil...

--- a/Frontend/app/src/main/res/values-en/strings.xml
+++ b/Frontend/app/src/main/res/values-en/strings.xml
@@ -25,5 +25,6 @@
         environment to enjoy your favorite food; You can immediately know the best sites
         in a matter of moments and also help other people with their opinions and photos
         of those places that you like.</string>
+    <string name="Main">Main</string>
 
 </resources>
