--- a/Frontend/app/src/main/res/values/strings.xml
+++ b/Frontend/app/src/main/res/values/strings.xml
@@ -25,6 +25,10 @@
         de tu entorno para disfrutar de tu comida preferida; Podrás saber inmediatamente
         cuáles son los mejores sitios en cuestión de instantes y además podrás ayudar a
         otras personas mediante tus opiniones y las fotos de esos lugares que más te gustan.</string>
+    <string name="Main">Principal</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
 </resources>
