--- a/Frontend/Proyecto/src/main/res/values/strings.xml
+++ b/Frontend/Proyecto/src/main/res/values/strings.xml
@@ -26,6 +26,7 @@
         cuáles son los mejores sitios en cuestión de instantes y además podrás ayudar a
         otras personas mediante tus opiniones y las fotos de esos lugares que más te gustan.</string>
     <string name="Main">Principal</string>
+    <string name="title_activity_maps">Map</string>
 
 
 </resources>
