--- a/Frontend/Proyecto/src/main/res/values/strings.xml
+++ b/Frontend/Proyecto/src/main/res/values/strings.xml
@@ -28,5 +28,8 @@
     <string name="Main">Principal</string>
     <string name="title_activity_maps">Map</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 
 </resources>
