--- a/Frontend/Proyecto/src/main/res/values/strings.xml
+++ b/Frontend/Proyecto/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_login">Sign in</string>
 
-    <string name="login">Ingresar</string>
+    <string name="login">Bienvenido</string>
     <string name="emailLogin">Correo electrónico</string>
     <string name="passwordLogin">Contraseña</string>
     <string name="google">Conectar con Goocle</string>
